--- a/sign-up.html
+++ b/sign-up.html
@@ -51,7 +51,7 @@
                     </label>
     
                     <div class="forgot-button-wrapper">
-                        <button onclick="window.location.href = '';" class="forgot-button" type="button">Forgot password?</button>
+                        <button onclick="window.location.href = '404.html';" class="forgot-button" type="button">Forgot password?</button>
                     </div>
                 </div>
 
